--- a/HypeOrTypeProj.Rmd
+++ b/HypeOrTypeProj.Rmd
@@ -23,8 +23,8 @@ pacman::p_load(twitteR,plyr, ggplot2, RColorBrewer, httpuv, RCurl, base64enc,dev
 requestURL <- "https://api.twitter.com/oauth/request_token"
 accessURL <- "https://api.twitter.com/oauth/access_token"
 authURL <- "https://api.twitter.com/oauth/authorize"
-consumerKey <- "VVyAQ0GEN3h7N492wmgN49yL5"
-consumerSecret <- "8EaVm0hGvPhOFwuHQRlk5Dc4mPgcJTCinuDOD2MIkYRB73dJdb"
+consumerKey <- "*********************************" #ENTER YOUR CREDENTIALS HERE FROM TWITTER DEVELOPERS SITE
+consumerSecret <- "****************************" #ENTER YOUR CREDENTIALS HERE FROM TWITTER DEVELOPERS SITE
 ```
 
 ```{r eval= FALSE}
@@ -48,7 +48,7 @@ geocode("las vegas, nv")
 
 ```{r}
 
-#Requires Logitute,Latitude (1.South, 2.North)
+#Logitute,Latitude (1.South, 2.North) to add into streamData function
 nyLoc <- "-74,40.47,-73.7,40.9"
 miaLoc <- "-80.3,25.7,-80.1,25.8"
 sfLoc <- "-122,36.8,-121.75,37.8	"
@@ -57,7 +57,7 @@ laLoc <- "-118.6, 33.7,-118.1,34.3"
 lvLoc <-  "-115.13, 35.95, -114.95, 36.16"
 utahLoc <-  "-112.1,40.7,-111.7,40.8"
 
-#iterates stream through cities provided
+#This iterates the stream for each of the cities provided
 iterData <- function(x) {
   streamData(x, nyLoc, "projx.json")
   streamData(x, miaLoc, "projx.json")
@@ -75,20 +75,18 @@ streamData <- function(x, y, w){
                track = c(x), # Collect tweets mentioning either Fox, fownews, oreilly, oreillyfactor
                language = "en",
                location = c(y), # latitude/longitude pairs providing southwest and northeast corners of the bounding box.
-               timeout = 10, # Keep connection alive for 60 seconds
+               timeout = 30, # This sets the length of the connection to gather data
                oauth = my_oauth) # Use my_oauth file as the OAuth credentials
   
 }
 
-#Input Function
+# Begins the function to start with key words provided
 iterData("s8 samsung, galaxy8 samsung, galaxys8 samsung, galaxys8,samsunggalaxy 8, samsunggalaxy8")
 
+iterData("goldengate, sfbay, bayarea, goldengatebridge, sf bay, san fran, san francisco")
 
-iterData2 <- function(x) {
-  streamData(x, sfLoc, "sfClasico.json")
-}
 
-iterData2("goldengate, sfbay, bayarea, goldengatebridge, sf bay, san fran, san francisco")
+
 
 ```
 
