--- a/toneAnalyzer.ipynb
+++ b/toneAnalyzer.ipynb
@@ -806,10 +806,8 @@
     "from watson_developer_cloud import ToneAnalyzerV3\n",
     "\n",
     "tone_analyzer = ToneAnalyzerV3(\n",
-    "    # username='YOUR SERVICE USERNAME',\n",
-    "    # password='YOUR SERVICE PASSWORD',\n",
-    "    username=\"1fc1683f-6911-46e8-8447-cf37093f1bec\",\n",
-    "    password=\"5E45FQPl06r3\",\n",
+    "    username='YOUR SERVICE USERNAME',\n",
+    "    password='YOUR SERVICE PASSWORD',\n",
     "    version='2016-02-11')\n",
     "\n",
     "# print(json.dumps(tone_analyzer.tone(text='Samsung Galaxy S8 International Giveaway!'), indent=2))\n",
